update graph and number format

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=sqlsrv
-DB_HOST=10.44.65.169
+DB_HOST=lacodb2
 DB_PORT=1433
 DB_DATABASE=laco_ft_db
 DB_USERNAME=aeuser
