--- a/.env
+++ b/.env
@@ -12,6 +12,13 @@ DB_DATABASE=laco_ft_db
 DB_USERNAME=aeuser
 DB_PASSWORD=pong4006207
 
+DB2_CONNECTION=mysql
+DB2_HOST=10.45.70.100
+DB2_PORT=3306
+DB2_DATABASE=check_weight
+DB2_USERNAME=lacouser
+DB2_PASSWORD=LACO1993
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
