Update Check Weight App

--- a/.env
+++ b/.env
@@ -19,6 +19,27 @@ DB2_DATABASE=check_weight
 DB2_USERNAME=lacouser
 DB2_PASSWORD=LACO1993
 
+DBW1_CONNECTION=mysql
+DBW1_HOST=10.45.70.101
+DBW1_PORT=3306
+DBW1_DATABASE=check_weight
+DBW1_USERNAME=lacouser
+DBW1_PASSWORD=LACO1993
+
+DBW2_CONNECTION=mysql
+DBW2_HOST=10.45.70.102
+DBW2_PORT=3306
+DBW2_DATABASE=check_weight
+DBW2_USERNAME=lacouser
+DBW2_PASSWORD=LACO1993
+
+DBW3_CONNECTION=mysql
+DBW3_HOST=10.45.70.103
+DBW3_PORT=3306
+DBW3_DATABASE=check_weight
+DBW3_USERNAME=lacouser
+DBW3_PASSWORD=LACO1993
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
