--- a/.env
+++ b/.env
@@ -24,21 +24,21 @@ DBW1_HOST=10.45.70.101
 DBW1_PORT=3306
 DBW1_DATABASE=check_weight
 DBW1_USERNAME=lacouser
-DBW1_PASSWORD=LACO1993
+DBW1_PASSWORD=L@CO1993
 
 DBW2_CONNECTION=mysql
 DBW2_HOST=10.45.70.102
 DBW2_PORT=3306
 DBW2_DATABASE=check_weight
 DBW2_USERNAME=lacouser
-DBW2_PASSWORD=LACO1993
+DBW2_PASSWORD=L@CO1993
 
 DBW3_CONNECTION=mysql
 DBW3_HOST=10.45.70.103
 DBW3_PORT=3306
 DBW3_DATABASE=check_weight
 DBW3_USERNAME=lacouser
-DBW3_PASSWORD=LACO1993
+DBW3_PASSWORD=L@CO1993
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
