update and run full   test

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:HoEIHHJgWW4kJ73QlX+QyAEvN2MxTL2njkZx2C8cm+Y=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://110.164.162.67:8080
+APP_URL=http://localhost
 
 DB_CONNECTION=sqlsrv
 DB_HOST=lacodb2
