--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ APP_URL=http://110.164.162.67:8080
 DB_CONNECTION=sqlsrv
 DB_HOST=lacodb2
 DB_PORT=1433
-DB_DATABASE=laco_ft_db
-DB_USERNAME=aeuser
-DB_PASSWORD=pong4006207
+DB_DATABASE=laco_ft_db_dev
+DB_USERNAME=ysuser
+DB_PASSWORD=laco1993
 
 DB2_CONNECTION=mysql
 DB2_HOST=10.45.70.100
