--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ APP_ENV=local
 APP_KEY=base64:HoEIHHJgWW4kJ73QlX+QyAEvN2MxTL2njkZx2C8cm+Y=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://110.164.162.67:8080
 
 DB_CONNECTION=sqlsrv
 DB_HOST=lacodb2
 DB_PORT=1433
-DB_DATABASE=laco_ft_db_dev
+DB_DATABASE=laco_ft_db
 DB_USERNAME=ysuser
 DB_PASSWORD=laco1993
 
